module/core/diagnostics_tools/tests/inc/snipet/cta_mem_same_size_fail.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
 --> $WORKSPACE/module/core/diagnostics_tools/tests/inc/snipet/cta_mem_same_size_fail.rs
  |
  |   cta_mem_same_size!( ins1, ins2 );
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: source type: `i32` (32 bits)
  = note: target type: `Int` (16 bits)
  = note: this error originates in the macro `$crate::cta_ptr_same_size` which comes from the expansion of the macro `cta_mem_same_size` (in Nightly builds, run with -Z macro-backtrace for more info)
